catapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catapp-ingress
  namespace: catapp
  # This annotation strips the prefix (/catapp) from the request before routing to target container.
  # Catapp cannot handle path based requests and we do not want it to.
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /catapp
        pathType: Prefix
        backend: 
          service:
            name: catapp-service
            port:
              number: 5000
